# foodie-with-dj-agno

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  verify_chat.py
core/accounts/: admin.py  choices.py  managers.py  models.py  serializers.py  urls.py  views.py
core/accounts/management/commands/: seed_users.py
core/accounts/migrations/: 0001_initial.py  0002_user_role.py
core/chat/: admin.py  agent.py  knowledge.py  models.py  serializers.py  urls.py  views.py
core/chat/migrations/: 0001_initial.py  0002_alter_thread_summary.py
core/chroma_data/: chroma.sqlite3
core/commons/: models.py  permissions.py
core/core/: celery.py  db_health_check.py  urls.py
core/core/settings/: __init__.py  base.py  dev.py  local.py  prod.py
core/core/utils/: message.py
core/restaurants/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests_rbac.py  urls.py  views.py
core/restaurants/management/commands/: sync_knowledge_base.py
core/restaurants/migrations/: 0001_initial.py  0002_allergen_ingredients_allergens_menu_allergens.py  0003_seed_japan_allergens.py  0004_remove_ingredients_allergens.py
